SUBDIRS = devices test

scenicdir = $(libdir)/scenic/py/scenic

scenic_PYTHON = application.py communication.py configure.py dialogs.py gui.py __init__.py \
		ports.py process.py runner.py saving.py sic.py sig.py streamer.py preview.py internationalization.py network.py glade.py

clean-local:
	rm -rf *.pyc
