SUBDIRS = devices test

scenicdir = $(libdir)/scenic/py/scenic

# in alphabetical order:
scenic_PYTHON = application.py \
	communication.py
	configure.py \
	dialogs.py \
	glade.py \
	gui.py \
	__init__.py \
	internationalization.py \
	network.py \
	ports.py \
	preview.py \
	process.py \
	runner.py \
	saving.py \
	sic.py \
	sig.py \
	streamer.py

clean-local:
	rm -rf *.pyc
