pkglib_LTLIBRARIES = libcaps.la

libcaps_la_SOURCES = CapsServer.cpp CapsServer.h CapsClient.cpp CapsClient.h \
                     MulticastCapsServer.cpp MulticastCapsServer.h \
                     MulticastCapsClient.cpp MulticastCapsClient.h

libcaps_la_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src/include -I$(top_srcdir)/src
