noinst_LTLIBRARIES = libcaps.la

libcaps_la_SOURCES = caps_server.cpp caps_server.h caps_client.cpp caps_client.h \
                     multicast_caps_server.cpp multicast_caps_server.h \
                     multicast_caps_client.cpp multicast_caps_client.h

libcaps_la_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src/include -I$(top_srcdir)/src
