figdir = $(datadir)/scenic/docbook/fig
fig_DATA = hardware_setup_01.jpg hardware_setup_02.jpg network_testing_01.png network_testing_02.png qjackctl.png qjackctl_Soundcard.png connection_information_1.png connection_information_2.png click_on_add_contact.png add_contact_edit_dialog.png
EXTRA_DIST = $(fig_DATA)
