figdir = $(datadir)/scenic/docbook/fig
fig_DATA = \
	add_contact_edit_dialog.png \
	bidirectional_setup.png \
	click_on_add_contact.png \
	connection_information_1.png \
	connection_information_2.png \
	edirol_fa101_settings_front.png \
	edirol_fa101_settings_rear.png \
	hardware_setup_01.jpg \
	hardware_setup_02.jpg \
	network_testing_01.png \
	network_testing_02.png \
	nvidia-opengl-settings.png \
	nvidia_settings-1.1.png \
	nvidia_settings-1.2.png \
	nvidia_settings-2.1.png \
	nvidia_settings-2.2.png \
	qjackctl.png \
	qjackctl_soundcard.png \
	unidirectional_setup.png

EXTRA_DIST = $(fig_DATA)
