installationdir = $(datadir)/scenic/docbook/installation
installation_DATA = \
	about.xml \
	ati-settings.xml \
	audio-video.xml \
	commandline.xml \
	edirol-fa101-settings.xml \
	hardware-requirement.xml \
	hardware-setup.xml \
	introduction.xml \
	legal.xml \
	network.xml \
	nvidia-settings.xml \
	software.xml

EXTRA_DIST = $(installation_DATA)
