userdir = $(datadir)/scenic/docbook/user
user_DATA = \
    about.xml \
    advanced-options.xml \
    audio-levels.xml \
    audio-settings.xml \
    before-using-scenic.xml \
    contact-settings.xml \
    introduction.xml \
    legal.xml \
    midi-settings.xml \
    video-settings.xml
EXTRA_DIST = $(user_DATA)
